# g13gui

./: .clang-format  .drone.yml  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PKGBUILD  Pipfile  README.md  g13gui.doap  g13gui.spec  meson.build  requirements.txt  setup.py
.github/workflows/: python.yml
.github/workflows/properties/: python.properties.json
debian/: changelog  control  copyright
docs/: applet-model.md  index.md
etc/: 91-g13.rules  CMakeLists.txt  com.theonelab.g13.Configurator.desktop  com.theonelab.g13.applet.Clock.desktop  com.theonelab.g13.applet.Profiles.desktop  com.theonelab.g13gui.Configurator.desktop  com.theonelab.g13gui.applet.Clock.desktop  com.theonelab.g13gui.applet.Profiles.desktop  g13d.service  test.lpbm  test.pbm
examples/: g13_test.py
g13d/: CMakeLists.txt  action.cc  action.h  bounds.h  config.h.in  coord.h  device.cc  device.h  find_or_throw.h  font.cc  font.h  font8x8.h  g13.cc  g13.h  g13_fonts.cc  g13_keys.cc  g13_lcd.cc  g13_main.cc  g13_stick.cc  helper.cc  helper.h  lcd.cc  lcd.h  logo.h  main.cc  manager.cc  manager.h  pbm2lpbm.cc  profile.cc  profile.h  repr.cc  repr.h  stick.cc  stick.h
g13gui/: README.md  app.py  common.py  main.py  tests.py
g13gui/applet/: applet.py  manager.py  switcher.py
g13gui/applets/: clock.py  profiles.py
g13gui/bitwidgets/: button.py  button_tests.py  buttonbar.py  dialog.py  display.py  display_tests.py  fonts.py  fonts_tests.py  glyph.py  graph.py  label.py  listview.py  listview_tests.py  rectangle.py  rectangle_tests.py  screen.py  screen_tests.py  widget.py  x11displaydevice.py
g13gui/g13/: common.py  displaydevice.py  manager.py  manager_mapping_test.py  manager_tests.py
g13gui/g13gui/: __init__.py  bindingprofile.py  bindingprofile_tests.py  bindings.py  buttonmenu.py  common.py  g13d.py  input.py  main.py  mainwindow.py  observer.py  observer_tests.py  prefs.py  prefs_tests.py  tests.py
g13gui/g13gui/applet/: applet.py  loopbackdisplaydevice.py  manager.py
g13gui/g13gui/applets/: clock.py
g13gui/g13gui/bitwidgets/: __init__.py  button.py  button_tests.py  display.py  display_tests.py  displaydevice.py  fonts.py  fonts_tests.py  label.py  label_tests.py  listview.py  rectangle.py  rectangle_tests.py  screen.py  widget.py  x11displaydevice.py
g13gui/g13gui/g13/: common.py  displaydevice.py  displaydevice_tests.py  manager.py  manager_mapping_test.py  manager_tests.py  stick.py
g13gui/g13gui/model/: __init__.py  bindingprofile.py  bindingprofile_tests.py  bindings.py  prefs.py  prefs_tests.py  prefsstore.py
g13gui/g13gui/observer/: __init__.py  gtkobserver.py  observer.py  observer_tests.py  subject.py
g13gui/g13gui/ui/: __init__.py  appindicator.py  g13button.py  g13buttonpopover.py  mainwindow.py  profilecombobox.py  profilepopover.py
g13gui/model/: bindingprofile.py  bindings.py  prefs.py
g13gui/observer/: gtkobserver.py  observer.py
g13gui/ui/: appindicator.py  g13button.py  g13buttonpopover.py  mainwindow.py  profilepopover.py
src/: g13.cc  helper.cc  helper.h
tools/: dockerbuild.sh  in-env  reformat
